works and fixed button spacing

--- a/client/resources/styles/index.css
+++ b/client/resources/styles/index.css
@@ -5,3 +5,7 @@
     background-color: lightblue;
     color: lavender;
 }
+
+.button{
+margin-left: 100px;
+}
